1、优化并完善跨界面移动悬浮View 2、在跨界面移动后增加静止处理，插入和移动悬浮View 3、增加bugly检测

--- a/app/src/main/res/layout/item_app_list.xml
+++ b/app/src/main/res/layout/item_app_list.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="113dp"
     android:gravity="center"
+    android:background="@drawable/frame_radius_violet"
     android:orientation="vertical"
     tools:ignore="UseCompoundDrawables">
 
