--- a/app/src/main/res/layout/item_app_list.xml
+++ b/app/src/main/res/layout/item_app_list.xml
@@ -2,27 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="@dimen/dp_104"
     android:gravity="center"
     android:orientation="vertical"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/ivAppIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/dp_52"
+        android:layout_height="@dimen/dp_52"
+        android:layout_marginBottom="@dimen/dp_4"
         android:scaleType="centerCrop"
-        android:layout_marginBottom="10dp"
         tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tvAppName"
-        android:layout_width="56dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="middle"
+        android:ellipsize="end"
         android:gravity="center"
         android:maxLength="10"
         android:singleLine="true"
         android:textColor="#000"
-        android:textSize="14sp" />
+        android:textSize="@dimen/sp_14" />
 </LinearLayout>
