1、增加Room数据库框架 2、增加初始化数据时并将网络数据保存至本地 3、增加条件处理：如果本地数据与网络数据内容元素是一样的并且数量也一样，优先读取本地数据并显示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,10 @@
             android:id="@+id/btnSwitchTransformPage"
             style="@style/style_navigation"
             android:text="切换侧滑动画" />
+        <Button
+            android:id="@+id/btnRefresh"
+            style="@style/style_navigation"
+            android:text="刷新" />
     </androidx.appcompat.widget.Toolbar>
 
     <com.hearthappy.desktoplist.desktopview.DesktopListView
