1、增加自定义控件，完成抖动动画的开始和停止

--- a/app/src/main/res/layout/item_app_list.xml
+++ b/app/src/main/res/layout/item_app_list.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:ignore="UseCompoundDrawables">
 
-    <androidx.constraintlayout.utils.widget.ImageFilterView
+    <com.hearthappy.desktoplist.desktopview.weiget.JitterImageView
         android:id="@+id/appIcon"
         android:layout_width="@dimen/dp_52"
         android:layout_height="@dimen/dp_52"
