--- a/app/src/main/res/layout/fragment_tab_main.xml
+++ b/app/src/main/res/layout/fragment_tab_main.xml
@@ -3,4 +3,5 @@
     android:id="@+id/rvDesktopList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorViolet"
     android:overScrollMode="never" />
