--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,9 +31,14 @@
             android:text="刷新" />
     </androidx.appcompat.widget.Toolbar>
 
-    <com.hearthappy.desktoplist.DesktopListView
-        android:id="@+id/dlv"
+    <com.hearthappy.desktoplist.DesktopRefreshLayout
+        android:id="@+id/sfl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <com.hearthappy.desktoplist.DesktopListView
+            android:id="@+id/dlv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.hearthappy.desktoplist.DesktopRefreshLayout>
 </LinearLayout>
