1、优化ItemView布局，文本过长显示省略号

--- a/desktoplist/src/main/res/layout/item_app_list.xml
+++ b/desktoplist/src/main/res/layout/item_app_list.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_4"
+        android:paddingEnd="@dimen/dp_4"
         android:singleLine="true"
         android:textColor="#000"
         android:textSize="@dimen/sp_14" />
