1、增加自定义文本控件。主要支持多文本显示 2、自定义控件增加文本切换动画。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         <Button
             android:id="@+id/btnRefresh"
             style="@style/style_navigation"
-            android:text="刷新" />
+            android:text="搜索" />
     </androidx.appcompat.widget.Toolbar>
 
     <com.hearthappy.desktoplist.DesktopRefreshLayout
