--- a/desktoplist/src/main/res/layout/item_app_list.xml
+++ b/desktoplist/src/main/res/layout/item_app_list.xml
@@ -15,7 +15,7 @@
         android:scaleType="centerCrop"
         tools:ignore="ContentDescription" />
 
-    <TextView
+    <com.hearthappy.desktoplist.weiget.MultipleTextView
         android:id="@+id/appName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
