1、优化成滚动效果显示多文本

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,11 @@
             android:id="@+id/btnRefresh"
             style="@style/style_navigation"
             android:text="搜索" />
+
+        <TextSwitcher
+            android:id="@+id/ts"
+            android:layout_width="100dp"
+            android:layout_height="match_parent" />
     </androidx.appcompat.widget.Toolbar>
 
     <com.hearthappy.desktoplist.DesktopRefreshLayout
