1、增加显示子文本

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,16 @@
             style="@style/style_navigation"
             android:text="搜索" />
 
-        <TextSwitcher
+        <Button
+            android:id="@+id/btnShowAppId"
+            style="@style/style_navigation"
+            android:text="显示应用id" />
+
+
+        <!--<TextSwitcher
             android:id="@+id/ts"
             android:layout_width="100dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" />-->
     </androidx.appcompat.widget.Toolbar>
 
     <com.hearthappy.desktoplist.DesktopRefreshLayout
