1、初始化数据库库版本 2、删除库中使用的viewBinging

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:layout_height="match_parent">
 
         <com.hearthappy.desktoplist.DesktopListView
-            android:id="@+id/dlv"
+            android:id="@+id/desktopView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </com.hearthappy.desktoplist.DesktopRefreshLayout>
